<resources>
    <string name="app_name">GPA CGPA</string>
    <string name="action_settings">Settings</string>
    <string name="bSem1and2"><![CDATA[SEMESTER I & II]]></string>
    <string name="bSem3">SEMESTER III</string>
    <string name="bSem4">SEMESTER IV</string>
    <string name="bSem5">SEMESTER V</string>
    <string name="bSem6">SEMESTER VI</string>
    <string name="bSem7">SEMESTER VII</string>
    <string name="bSem8">SEMESTER VIII</string>
    <string name="grade_s">S</string>
    <string name="grade_a">A</string>
    <string name="grade_b">B</string>
    <string name="grade_c">C</string>
    <string name="grade_d">D</string>
    <string name="grade_f">F</string>
    <string-array name="grades">
        <item>S</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>F</item>
    </string-array>
</resources>
