<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="imsreenadh.gpacgpa.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!-- FIRST YEAR -->
            <com.rey.material.widget.Button
                android:id="@+id/firstYearButton"
                style="@style/Material.Drawable.Ripple.Wave.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF5252"
                android:onClick="firstYearButtonClicked"
                android:padding="16dp"
                android:text="@string/bSem1and2"
                android:textColor="#fff"
                app:rd_backgroundAnimDuration="0"
                app:rd_enable="true"
                app:rd_rippleAnimDuration="600"
                app:rd_rippleColor="#64ffc9c9" />

            <!-- THIRD SEM -->
            <com.rey.material.widget.Button
                android:id="@+id/thirdSemButton"
                style="@style/Material.Drawable.Ripple.Wave.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstYearButton"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="#448AFF"
                android:onClick="thirdSemesterButtonClicked"
                android:padding="16dp"
                android:text="@string/bSem3"
                android:textColor="#fff"
                app:rd_backgroundAnimDuration="0"
                app:rd_enable="true"
                app:rd_rippleAnimDuration="600"
                app:rd_rippleColor="#65c9ddff" />

            <!-- FORTH SEM -->
            <com.rey.material.widget.Button
                android:id="@+id/forthSemButton"
                style="@style/Material.Drawable.Ripple.Wave.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thirdSemButton"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="#FFAB40"
                android:onClick="forthSemesterButtonClicked"
                android:padding="16dp"
                android:text="@string/bSem4"
                android:textColor="#fff"
                app:rd_backgroundAnimDuration="0"
                app:rd_enable="true"
                app:rd_rippleAnimDuration="600"
                app:rd_rippleColor="#64ffe7c8" />

            <!-- FIFTH SEM -->
            <com.rey.material.widget.Button
                android:id="@+id/fifthSemButton"
                style="@style/Material.Drawable.Ripple.Wave.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forthSemButton"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="#43A047"
                android:onClick="fifthSemesterButtonClicked"
                android:padding="16dp"
                android:text="@string/bSem5"
                android:textColor="#fff"
                app:rd_backgroundAnimDuration="0"
                app:rd_enable="true"
                app:rd_rippleAnimDuration="600"
                app:rd_rippleColor="#64c8ffcb" />

            <!-- SIXTH SEM -->
            <com.rey.material.widget.Button
                android:id="@+id/sixthSemButton"
                style="@style/Material.Drawable.Ripple.Wave.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fifthSemButton"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="#5E35B1"
                android:onClick="sixthSemesterButtonClicked"
                android:padding="16dp"
                android:text="@string/bSem6"
                android:textColor="#fff"
                app:rd_backgroundAnimDuration="0"
                app:rd_enable="true"
                app:rd_rippleAnimDuration="600"
                app:rd_rippleColor="#64dac8fd" />

            <!-- SEVENTH SEM -->
            <com.rey.material.widget.Button
                android:id="@+id/seventhSemButton"
                style="@style/Material.Drawable.Ripple.Wave.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sixthSemButton"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="#009688"
                android:onClick="seventhSemesterButtonClicked"
                android:padding="16dp"
                android:text="@string/bSem7"
                android:textColor="#fff"
                app:rd_backgroundAnimDuration="0"
                app:rd_enable="true"
                app:rd_rippleAnimDuration="600"
                app:rd_rippleColor="#63c8fffa" />

            <!-- EIGTH SEM -->
            <com.rey.material.widget.Button
                android:id="@+id/eigthSemButton"
                style="@style/Material.Drawable.Ripple.Wave.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seventhSemButton"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="#BA68C8"
                android:onClick="eighthSemesterButtonClicked"
                android:padding="16dp"
                android:text="@string/bSem8"
                android:textColor="#fff"
                app:rd_backgroundAnimDuration="0"
                app:rd_enable="true"
                app:rd_rippleAnimDuration="600"
                app:rd_rippleColor="#64f7caff" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
